<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.dario.project3.MainActivity">


    <Button
        android:id="@+id/createAccount"
        android:layout_gravity="center"
        android:text="@string/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/placeHold"
        android:layout_gravity="center"
        android:text="@string/placeHold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/cancelHold"
        android:layout_gravity="center"
        android:text="@string/cancelHold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/manageSystem"
        android:layout_gravity="center"
        android:text="@string/manageSystem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>